# MyApplication

app/: build.gradle.kts
app/src/main/assets/: WebSocketServer.kt  index.html  tsconfig.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: EGLHelper.kt  MainActivity.kt  MyGLRenderer.kt
gradle/wrapper/: gradle-wrapper.properties
